force-app/main/default/objects/Questionnaire_Navigation__c/Questionnaire_Navigation__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Navigation</label>
    <nameField>
        <label>Questionnaire Node Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Navigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>