force-app/main/default/objects/Questionnaire_Navigation__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Questionnaire Navigations</relationshipLabel>
    <relationshipName>Questionnaire_Navigations</relationshipName>
    <type>Lookup</type>
</CustomField>