force-app/main/default/objects/Questionnaire_Navigation__c/fields/Rules_JSON__c.field-meta.xml
<CustomField>
    <fullName>Rules_JSON__c</fullName>
    <label>Rules JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>