force-app/main/default/objects/Questionnaire_Navigation__c/fields/Source_Node__c.field-meta.xml
<CustomField>
    <fullName>Source_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Node</label>
    <referenceTo>Question_Node__c</referenceTo>
    <relationshipLabel>Questionnaire Navigations</relationshipLabel>
    <relationshipName>Questionnaire_Navigations</relationshipName>
    <type>Lookup</type>
</CustomField>