force-app/main/default/objects/Questionnaire_Navigation__c/fields/Target_Node__c.field-meta.xml
<CustomField>
    <fullName>Target_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Node</label>
    <referenceTo>Question_Node__c</referenceTo>
    <relationshipLabel>Questionnaire Navigations (Target Node)</relationshipLabel>
    <relationshipName>Questionnaire_Navigations1</relationshipName>
    <type>Lookup</type>
</CustomField>