force-app/main/default/objects/Questionnaire_Navigation__c/fields/Target_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Target_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target_Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Questionnaire Navigations (Target_Questionnaire)</relationshipLabel>
    <relationshipName>Questionnaire_Navigations1</relationshipName>
    <type>Lookup</type>
</CustomField>